fix: Improve scrollbar style

--- a/src/renderer/styles/logtable.less
+++ b/src/renderer/styles/logtable.less
@@ -25,10 +25,6 @@
     flex-grow: 1;
   }
 
-  .HasData {
-    //color: @dark_purple;
-  }
-
   .Meta {
     padding-right: 5px;
   }
